Fixed spacing

--- a/_assets/elements/pages/about-page.scss
+++ b/_assets/elements/pages/about-page.scss
@@ -20,6 +20,10 @@
 #headshot {
   position: relative;
 
+  svg {
+    display: block;
+  }
+
   &::before {
     @extend %stretch;
 
